[package]
name = "kernel"
version = "0.1.0"
authors = ["Andre Richter <andre.o.richter@gmail.com>"]
edition = "2018"

# The features section is used to select the target board.
[features]
default = []
bsp_versatilepb = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[dependencies.embedded-graphics]
version = "0.6.0"

[dependencies]
#compiler_builtins = "0.1.27"
linked_list_allocator = "0.8.0"
spin = "0.5.2"
rlibc = "1.0"
